--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ホムページ作ってみました</title>
+<title>ホームページ作ってみましたああああああああああああああああああああああ</title>
 <link rel="stylesheet" href="style.css">
 <meta name="robots" content="noindex">
 <script src="https://kit.fontawesome.com/66ad71f8e3.js" crossorigin="anonymous"></script>
